chore(website): fix spelling

--- a/website/pages/docs/json/stringify.mdx
+++ b/website/pages/docs/json/stringify.mdx
@@ -67,7 +67,7 @@ Instead, `typia` supports type safe JSON serialization functions like `typia.jso
 <br/>
 <Alert severity="success">
   <AlertTitle> 
-    **AOT compliation** 
+    **AOT compilation** 
   </AlertTitle>
 
 `typia.json.isStringify()` and other similar functions are still much faster than native `JSON.stringify()` function, even though they include type checking process. This is the power of AOT compilation, writing optimal dedicated code by analyzing TypeScript type, in the compilation level.
