--- a/website/pages/docs/llm/application.mdx
+++ b/website/pages/docs/llm/application.mdx
@@ -70,7 +70,7 @@ import { ILlmSchema } from "./ILlmSchema";
  *
  * Also, there can be some parameters (or their nested properties) which must be
  * composed by Human, not by LLM. File uploading feature or some sensitive information
- * like secrety key (password) are the examples. In that case, you can separate the
+ * like secretly key (password) are the examples. In that case, you can separate the
  * function parameters to both LLM and human sides by configuring the
  * {@link ILlmApplication.IOptions.separate} property. The separated parameters are
  * assigned to the {@link ILlmFunction.separated} property.
@@ -78,7 +78,7 @@ import { ILlmSchema } from "./ILlmSchema";
  * For reference, when both LLM and Human filled parameter values to call, you can
  * merge them by calling the {@link HttpLlm.mergeParameters} function. In other words,
  * if you've configured the {@link ILlmApplication.IOptions.separate} property, you
- * have to merge the separated parameters before the funtion call execution.
+ * have to merge the separated parameters before the function call execution.
  *
  * @reference https://platform.openai.com/docs/guides/function-calling
  * @author Jeongho Nam - https://github.com/samchon
@@ -207,7 +207,7 @@ export interface ILlmFunction<Model extends ILlmSchema.Model> {
    *
    * Also, when the LLM conversates with the user, the `description` is
    * used to explain the function to the user. Therefore, the `description`
-   * property has the highest priroity, and you have to consider it.
+   * property has the highest priority, and you have to consider it.
    */
   description?: string | undefined;
 
@@ -423,7 +423,7 @@ import { ILlmSchema } from "./ILlmSchema";
  *
  * Also, there can be some parameters (or their nested properties) which must be
  * composed by Human, not by LLM. File uploading feature or some sensitive information
- * like secrety key (password) are the examples. In that case, you can separate the
+ * like secretly key (password) are the examples. In that case, you can separate the
  * function parameters to both LLM and human sides by configuring the
  * {@link ILlmApplication.IOptions.separate} property. The separated parameters are
  * assigned to the {@link ILlmFunction.separated} property.
@@ -431,7 +431,7 @@ import { ILlmSchema } from "./ILlmSchema";
  * For reference, when both LLM and Human filled parameter values to call, you can
  * merge them by calling the {@link HttpLlm.mergeParameters} function. In other words,
  * if you've configured the {@link ILlmApplication.IOptions.separate} property, you
- * have to merge the separated parameters before the funtion call execution.
+ * have to merge the separated parameters before the function call execution.
  *
  * @reference https://platform.openai.com/docs/guides/function-calling
  * @author Jeongho Nam - https://github.com/samchon
@@ -560,7 +560,7 @@ export interface ILlmFunction<Model extends ILlmSchema.Model> {
    *
    * Also, when the LLM conversates with the user, the `description` is
    * used to explain the function to the user. Therefore, the `description`
-   * property has the highest priroity, and you have to consider it.
+   * property has the highest priority, and you have to consider it.
    */
   description?: string | undefined;
 
@@ -698,7 +698,7 @@ import { IValidation } from "../../IValidation";
  *
  * By the way, there can be some parameters (or their nested properties) which must be
  * composed by Human, not by LLM. File uploading feature or some sensitive information
- * like secrety key (password) are the examples. In that case, you can separate the
+ * like secretly key (password) are the examples. In that case, you can separate the
  * function parameters to both LLM and human sides by configuring the
  * {@link ILlmApplication.IOptions.separate} property. The separated parameters are
  * assigned to the {@link ILlmFunction.separated} property.
@@ -706,7 +706,7 @@ import { IValidation } from "../../IValidation";
  * For reference, when both LLM and Human filled parameter values to call, you can
  * merge them by calling the {@link HttpLlm.mergeParameters} function. In other words,
  * if you've configured the {@link ILlmApplication.IOptions.separate} property, you
- * have to merge the separated parameters before the funtion call execution.
+ * have to merge the separated parameters before the function call execution.
  *
  * @reference https://platform.openai.com/docs/guides/function-calling
  * @author Jeongho Nam - https://github.com/samchon
