--- a/website/pages/docs/llm/chat.mdx
+++ b/website/pages/docs/llm/chat.mdx
@@ -62,7 +62,7 @@ yarn add -D @ryoppippi/unplugin-typia
   </Tabs.Tab>
 </Tabs>
 
-I'll decribe how to setup the A.I. chatbot application within framework of the `vite`.
+I'll describe how to setup the A.I. chatbot application within framework of the `vite`.
 
 At first, create a `vite` + `react` + `typescript` project by executing the `npm create vite@latest bbs -- --template react-ts` command. Then, move to the created project directory `bbs`. And then, install `@nestia/chat` and its dependency packages. After that, run the `npx typia setup` command and `npm i -D @ryoppippi/unplugin-typia` to setup the `typia` library with the transformer configuration.
 
