--- a/website/pages/docs/llm/strategy.mdx
+++ b/website/pages/docs/llm/strategy.mdx
@@ -997,7 +997,7 @@ console.log(app);
 
 Hiding some functions by comment tag.
 
-If you write `@hidden`, `@human` or `@internal` tag onto a function description comment, the function would not participate in the LLM (Large Language Model) function calling application composition. `ILlmFunction` schema does not be genrated in the `ILlmApplication.functions` collection.
+If you write `@hidden`, `@human` or `@internal` tag onto a function description comment, the function would not participate in the LLM (Large Language Model) function calling application composition. `ILlmFunction` schema does not be generated in the `ILlmApplication.functions` collection.
 
 It's a good feature to hide some internal functions, so that avoiding the LLM function calling.
 
