--- a/website/pages/docs/protobuf/decode.mdx
+++ b/website/pages/docs/protobuf/decode.mdx
@@ -199,7 +199,7 @@ For reference, `typia` provides type safe decorators like below, but they are ju
 <br/>
 <Alert severity="success">
   <AlertTitle> 
-    **AOT compliation** 
+    **AOT compilation** 
   </AlertTitle>
 
 `typia.protobuf.decode<T>()` and other similar functions are still much faster than any other competitive libraries, even though they include type checking process. This is the power of AOT compilation, writing optimal dedicated code by analyzing TypeScript type, in the compilation level.
