--- a/website/pages/docs/random.mdx
+++ b/website/pages/docs/random.mdx
@@ -215,7 +215,7 @@ interface IValueOf<T> {
 
 You can make every random data just by calling `typia.random<T>()` function.
 
-When you call the `typia.random<T>()` function, `typia` will analyze your type `T`, and writes optimal random generation code for the type `T`, in the compilation level. This is called AOT (Ahead of Time) compliation, and you may understand what it is just by reading below example code. 
+When you call the `typia.random<T>()` function, `typia` will analyze your type `T`, and writes optimal random generation code for the type `T`, in the compilation level. This is called AOT (Ahead of Time) compilation, and you may understand what it is just by reading below example code. 
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
