--- a/website/pages/docs/validators/validate.mdx
+++ b/website/pages/docs/validators/validate.mdx
@@ -57,7 +57,7 @@ In the below example case, as `id` and `age` values are different with its defin
 <br/>
 <Alert severity="success">
   <AlertTitle> 
-    **AOT compliation** 
+    **AOT compilation** 
   </AlertTitle>
 
 If you'd used other competitive validator libraries like `ajv` or `class-validator`, you may found that `typia` does not require any extra schema definition. If you have not experienced them, I can sure that you may get shocked after reading below extra schema definition files.
