--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -146,4 +146,4 @@ Also, `typia` is re-distributing half of donations to core contributors of `typi
   - [`nonara/ts-patch`](https://github.com/nonara/ts-patch)
   - [`ryoppippi/unplugin-typia`](https://github.com/ryoppippi/unplugin-typia)
 
-[![Sponsers](https://opencollective.com/typia/badge.svg?avatarHeight=75&width=600)](https://opencollective.com/typia)
+[![Sponsors](https://opencollective.com/typia/badge.svg?avatarHeight=75&width=600)](https://opencollective.com/typia)
