--- a/website/pages/docs/protobuf/encode.mdx
+++ b/website/pages/docs/protobuf/encode.mdx
@@ -190,7 +190,7 @@ By the way, `typia.protobuf.encode<T>()` function does not validate the `input` 
 <br/>
 <Alert severity="success">
     <AlertTitle> 
-        **AOT compliation** 
+        **AOT compilation** 
     </AlertTitle>
 
 `typia.protobuf.encode<T>()` and other similar functions are still much faster than any other competitive libraries, even though they include type checking process. This is the power of AOT compilation, writing optimal dedicated code by analyzing TypeScript type, in the compilation level.
