--- a/website/pages/docs/validators/assert.mdx
+++ b/website/pages/docs/validators/assert.mdx
@@ -43,7 +43,7 @@ The `TypeGuardError` instance has only the first type error info, with access pa
 <br/>
 <Alert severity="success">
   <AlertTitle> 
-    **AOT compliation** 
+    **AOT compilation** 
   </AlertTitle>
 
 If you'd used other competitive validator libraries like `ajv` or `class-validator`, you may found that `typia` does not require any extra schema definition. If you have not experienced them, I can sure that you may get shocked after reading below extra schema definition files.
@@ -696,7 +696,7 @@ export const assertMember = (() => {
 
 <Alert severity="warning">
   <AlertTitle>
-    **Explicity of Assertion Guard** 
+    **Explicitly of Assertion Guard** 
   </AlertTitle>
 
 Be careful when using `typia.createAssertGuard<T>()` or `typia.createAssertGuardEquals<T>()` functions. 
