--- a/website/pages/docs/llm/application.mdx
+++ b/website/pages/docs/llm/application.mdx
@@ -70,7 +70,7 @@ import { ILlmSchema } from "./ILlmSchema";
  *
  * Also, there can be some parameters (or their nested properties) which must be
  * composed by Human, not by LLM. File uploading feature or some sensitive information
- * like secretly key (password) are the examples. In that case, you can separate the
+ * like secret key (password) are the examples. In that case, you can separate the
  * function parameters to both LLM and human sides by configuring the
  * {@link ILlmApplication.IOptions.separate} property. The separated parameters are
  * assigned to the {@link ILlmFunction.separated} property.
@@ -423,7 +423,7 @@ import { ILlmSchema } from "./ILlmSchema";
  *
  * Also, there can be some parameters (or their nested properties) which must be
  * composed by Human, not by LLM. File uploading feature or some sensitive information
- * like secretly key (password) are the examples. In that case, you can separate the
+ * like secret key (password) are the examples. In that case, you can separate the
  * function parameters to both LLM and human sides by configuring the
  * {@link ILlmApplication.IOptions.separate} property. The separated parameters are
  * assigned to the {@link ILlmFunction.separated} property.
@@ -698,7 +698,7 @@ import { IValidation } from "../../IValidation";
  *
  * By the way, there can be some parameters (or their nested properties) which must be
  * composed by Human, not by LLM. File uploading feature or some sensitive information
- * like secretly key (password) are the examples. In that case, you can separate the
+ * like secret key (password) are the examples. In that case, you can separate the
  * function parameters to both LLM and human sides by configuring the
  * {@link ILlmApplication.IOptions.separate} property. The separated parameters are
  * assigned to the {@link ILlmFunction.separated} property.
