Revert "chore(website): secretly -> secret"
This reverts commit 547b9e9595c9ce9b0902f6f5a1964a013cb3e249.

--- a/website/pages/docs/llm/parameters.mdx
+++ b/website/pages/docs/llm/parameters.mdx
@@ -70,7 +70,7 @@ import { ILlmSchema } from "./ILlmSchema";
  *
  * Also, there can be some parameters (or their nested properties) which must be
  * composed by Human, not by LLM. File uploading feature or some sensitive information
- * like secret key (password) are the examples. In that case, you can separate the
+ * like secretly key (password) are the examples. In that case, you can separate the
  * function parameters to both LLM and human sides by configuring the
  * {@link ILlmApplication.IOptions.separate} property. The separated parameters are
  * assigned to the {@link ILlmFunction.separated} property.
@@ -345,7 +345,7 @@ import { IValidation } from "../../IValidation";
  *
  * By the way, there can be some parameters (or their nested properties) which must be
  * composed by Human, not by LLM. File uploading feature or some sensitive information
- * like secret key (password) are the examples. In that case, you can separate the
+ * like secretly key (password) are the examples. In that case, you can separate the
  * function parameters to both LLM and human sides by configuring the
  * {@link ILlmApplication.IOptions.separate} property. The separated parameters are
  * assigned to the {@link ILlmFunction.separated} property.
