--- a/website/pages/docs/llm/chat.mdx
+++ b/website/pages/docs/llm/chat.mdx
@@ -36,7 +36,7 @@ npm create vite@latest bbs -- --template react-ts
 cd bbs
 
 npm install @nestia/agent @nestia/chat @samchon/openapi openai
-npx typia setup
+npx typia setup --project tsconfig.json
 npm install -D @ryoppippi/unplugin-typia
 ```
   </Tabs.Tab>
@@ -46,7 +46,7 @@ pnpm create vite@latest bbs -- --template react-ts
 cd bbs
 
 pnpm install @nestia/agent @nestia/chat @samchon/openapi openai
-pnpm typia setup
+pnpm typia setup --project tsconfig.json
 pnpm install -D @ryoppippi/unplugin-typia
 ```
   </Tabs.Tab>
@@ -56,7 +56,7 @@ yarn create vite@latest bbs --template react-ts
 cd bbs
 
 yarn add @nestia/agent @nestia/chat @samchon/openapi openai
-yarn typia setup
+yarn typia setup --project tsconfig.json
 yarn add -D @ryoppippi/unplugin-typia
 ```
   </Tabs.Tab>
