Add more gurubase document chatbot links

--- a/website/pages/docs/llm/chat.mdx
+++ b/website/pages/docs/llm/chat.mdx
@@ -1,5 +1,5 @@
 ---
-title: Guide Documents > Large Language Model > A.I. Chatbot
+title: Guide Documents > Large Language Model > AI Chatbot Development
 ---
 import { Callout, Tabs } from 'nextra/components'
 
