--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -12,52 +12,8 @@ import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
 ## Transformer
 ![Typia Logo](/logo.png)
 
-{/* <span style={{ display: "flex", flexDirection: "row" }}>
-{[
-  [
-    "MIT License",
-    "https://img.shields.io/badge/license-MIT-blue.svg",
-    "https://github.com/samchon/typia/blob/master/LICENSE",
-  ],
-  [
-    "NPM Version",
-    "https://img.shields.io/npm/v/typia.svg",
-    "https://www.npmjs.com/package/typia",
-  ],
-  [
-    "NPM Downloads",
-    "https://img.shields.io/npm/dm/typia.svg",
-    "https://www.npmjs.com/package/typia",
-  ],
-  [
-    "Build Status",
-    "https://github.com/samchon/typia/workflows/build/badge.svg",
-    "https://github.com/samchon/typia/actions?query=workflow%3Abuild",
-  ],
-  [
-    "Guide Documents",
-    "https://img.shields.io/badge/guide-documents-forestgreen",
-    "https://typia.io/docs/",
-  ],
-  [
-    "Gurubase",
-    "https://img.shields.io/badge/Gurubase-Ask%20Typia%20Guru-006BFF",
-    "https://gurubase.io/g/typia",
-  ],
-  [
-    "Discord",
-    "https://img.shields.io/badge/discord-samchon-d91965?style=flat&labelColor=5866f2&logo=discord&logoColor=white&link=https://discord.gg/E94XhzrUCZ",
-    "https://discord.gg/E94XhzrUCZ",
-  ]
-].map(([alt, image, url]) => (
-  <a href={url} style={{ marginTop: "30px", marginRight: "6px" }}>
-      <img src={image} alt={alt} />
-  </a>
-))}
-</span> */}
-
 <center>
-[Guide Documents](/docs) · [Playground (Online IDE)](/playground) · [Github Repository](https://github.com/samchon/typia)
+[Guide Documents](/docs) ([Document Chatbot](https://gurubase.io/g/typia)) · [Playground (Online IDE)](/playground) · [Github Repository](https://github.com/samchon/typia)
 </center>
 
 `typia` is a transformer library converting TypeScript types to runtime function. 
