Add gurubase widget

--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -1,8 +1,6 @@
 ---
 title: Home
 ---
-import { Bleed } from 'nextra-theme-docs'
-
 import HomeLayout from "../src/components/home/HomeLayout";
 import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
 
@@ -13,7 +11,7 @@ import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
 ![Typia Logo](/logo.png)
 
 <center>
-[Guide Documents](/docs) ([Document Chatbot](https://gurubase.io/g/typia)) · [Playground (Online IDE)](/playground) · [Github Repository](https://github.com/samchon/typia)
+[Guide Documents](/docs) · [Playground (Online IDE)](/playground) · [Github Repository](https://github.com/samchon/typia)
 </center>
 
 `typia` is a transformer library converting TypeScript types to runtime function. 
